data/derived/comb/progs/unify/prog5488.ml.out
Characters 423-468:
  | Op (m, n, o) -> sqrt(abs(eval(m, x, y)+.eval(n, x, y)+.eval(o, x, y)))/.3.0;;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
